--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gulp-mocha": "^6.0.0",
     "chakram": "^1.5.0",
     "oatts": "1.2.3",
-    "js-yaml": "3.12.0",
+    "js-yaml": ">=3.13.1",
     "lodash.merge": "4.6.1"
   }
 }
