--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "chakram": "^1.5.0",
     "oatts": "1.2.3",
     "js-yaml": ">=3.13.1",
-    "lodash.merge": "4.6.1"
+    "lodash.merge": ">=4.6.2"
   }
 }
