--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <swagger-core-version>1.5.21</swagger-core-version>
 
         <jackson-version>2.9.9</jackson-version>
+        <jackson-databind-version>2.9.9.1</jackson-databind-version>
         <jackson-threetenbp-version>2.6.4</jackson-threetenbp-version>
         <client-lib-version>0.0.1</client-lib-version>
     </properties>
@@ -107,7 +108,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson-version}</version>
+            <version>${jackson-databind-version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.joschi.jackson</groupId>
